--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-	 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
+	 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -33,7 +34,7 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="axit-nav">          
+        <div class="collapse navbar-collapse" id="axit-nav">
 
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Features</a></li>
@@ -46,6 +47,33 @@
       </div><!-- /.container-fluid -->
     </nav>
 	<!-- end navbar -->
+
+              <!-- start header -->
+  <div class="header">
+		<div class="overlay">
+	    <div class="container">
+		    <div class="row centering-vh">
+		      <div class="col-md-6">
+		        <h1 class="uppercase">Ax<span>it</span></h1>
+		        <p class="lead uppercase">modern axure template for beautiful prototypes</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<button>Download</button>
+		      </div>
+
+		      <div class="col-md-6">
+						<form class="center-block">
+							<h2 class="text-center">Try Your <span>Free</span> Trial Today</h2>
+							<input class="form-control" type="text" name="" placeholder="Name"/>
+							<input class="form-control" type="email" name="" placeholder="Email"/>
+							<input class="form-control" type="password" name="" placeholder="Passowrd"/>
+							<input class="btn btn-block" type="submit" name="submit" value="Get Started" />
+						</form>
+					</div>
+		    </div>
+	    </div>
+		</div>
+  </div>
+              <!-- end header -->
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
