--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@
 		</div>
   </div>
               <!-- end header -->
+
+							<!-- Social Media Section -->
+	<div class="social-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<h3>Social Media</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+				</div>
+				<div class=col-md-8"">
+					<i class="fa fa-facebook fa-3x fa-fw"></i>
+					<i class="fa fa-twitter fa-3x fa-fw"></i>
+					<i class="fa fa-google-plus fa-3x fa-fw"></i>
+					<i class="fa fa-pinterest fa-3x fa-fw"></i>
+					<i class="fa fa-instagram fa-3x fa-fw"></i>
+					<i class="fa fa-stumbleupon fa-3x fa-fw"></i>
+					<i class="fa fa-rss fa-3x fa-fw"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
