--- a/index.html
+++ b/index.html
@@ -96,6 +96,47 @@
 		</div>
 	</div>
 
+							<!-- Tabs -->
+	<div class="tabs-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-2">
+					<ul class="list-unstyled tab-switch text-center uppercase">
+						<li class="selected" data-class="tab-one">Tab 1</li>
+						<li data-class="tab-two">Tab 2</li>
+						<li data-class="tab-three">Tab 3</li>
+					</ul>
+				</div>
+
+				<div class="col-md-6">
+					<div class="tabs-content">
+						<div class="tab-one">
+							<h3>Tab Number One</h3>
+							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<button class="btn btn-lg">Download</button>
+						</div>
+
+						<div class="tab-two">
+							<h3>Tab Number Two</h3>
+							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<button class="btn btn-lg">Download</button>
+						</div>
+
+						<div class="tab-three">
+							<h3>Tab Number Three</h3>
+							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<button class="btn btn-lg">Download</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<img src="img/tabs.png" class="img-responsive" alt="" />
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
