--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-	<!-- start navbar -->
+						<!-- navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -43,12 +43,11 @@
             <li><a href="#">Reviews</a></li>
             <li><a href="#">Conact</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+        </div>
+      </div>
     </nav>
-	<!-- end navbar -->
 
-              <!-- start header -->
+              <!-- header -->
   <div class="header">
 		<div class="overlay">
 	    <div class="container">
@@ -73,7 +72,6 @@
 	    </div>
 		</div>
   </div>
-              <!-- end header -->
 
 							<!-- Social Media Section -->
 	<div class="social-section">
@@ -136,6 +134,42 @@
 			</div>
 		</div>
 	</div>
+							<!-- Sublist -->
+	<div class="sublist">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<img class="img-responsive center-block sub-img" src="img/sublist.png" alt="" />
+				</div>
+
+				<div class="col-md-6">
+					<div class="list-info">
+						<h3 class="head-border sublist-head">Sublist Section</h3>
+						<p class="sublist-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<div class="list-icon">
+							<i class="fa fa-cloud-download fa-lg pull-left"></i>
+							<div class="text-info pull-left">
+								<h4>Download</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+							</div>
+						</div>
+
+						<div class="clearfix"></div>
+
+						<div class="list-icon">
+							<i class="fa fa-cloud-upload fa-lg pull-left"></i>
+							<div class="text-info pull-left">
+								<h4>Upload</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+						</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 
 
 	<script src="js/jquery-3.2.1.min.js"></script>
