Standard Picture Section

--- a/index.html
+++ b/index.html
@@ -170,6 +170,23 @@
 	</div>
 
 
+							<!-- Standard Picture Section -->
+	<div class="standard-picture">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="list-info">
+						<h3 class="head-border standard-head">Standard Picture</h3>
+						<p class="standard-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<img class="img-responsive center-block standard-img" src="img/sublist.png" alt="" />
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 	<script src="js/jquery-3.2.1.min.js"></script>
