Why-This-Is-Awesome Section

--- a/index.html
+++ b/index.html
@@ -188,6 +188,34 @@
 		</div>
 	</div>
 
+							<!-- This Is Awesome Section -->
+	<div class="awesome text-center">
+		<div class="container">
+			<h2 class="h1 awesome-head uppercase head-border-center">why this is awesome</h2>
+			<p class="awesome-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+			<div class="row">
+				<div class="col-md-4">
+					<i class="fa fa-lightbulb-o fa-3x"></i>
+					<h3 class="feature-head">Thoughtful Design</h3>
+					<p class="feature-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+				</div>
+
+				<div class="col-md-4">
+					<i class="fa fa-keyboard-o fa-2x"></i>
+					<h3 class="feature-head">Well  Crafted</h3>
+					<p class="feature-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+				</div>
+
+				<div class="col-md-4">
+					<i class="fa fa-flash fa-3x"></i>
+					<h3 class="feature-head">Easy To Customize</h3>
+					<p class="feature-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
