Pricing Options Section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<h3>Social Media</h3>
+					<h3 class="plan-head">Social Media</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
 				</div>
 				<div class=col-md-8"">
@@ -211,6 +211,80 @@
 					<i class="fa fa-flash fa-3x"></i>
 					<h3 class="feature-head">Easy To Customize</h3>
 					<p class="feature-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+							<!-- Pricing Option Section -->
+	<div class="price-options text-center">
+		<div class="container">
+			<h2 class="h1 price-head uppercase head-border-center">pricing options</h2>
+			<p class="price-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+			<div class="row">
+				<div class="col-md-4">
+					<div class="price-box basic">
+						<h3 class="plan-head">Basic</h3>
+						<div class="option-price">
+							<span class="price">
+								<span class="usd">$</span>0
+							</span>
+							<span class="period">Free For Life</span>
+						</div>
+
+						<ul class="list-unstyled configuration uppercase">
+							<li>1 GB Of Space </li>
+							<li>10 GB of bandwidth</li>
+							<li>3 websites</li>
+							<li>basic customization</li>
+							<li>wordpress integration</li>
+							<li>email support</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="price-box professional">
+						<h3 class="plan-head">Professional</h3>
+						<div class="option-price">
+							<span class="price">
+								<span class="usd">$</span>19
+							</span>
+							<span class="period">Free For Life</span>
+						</div>
+						<p class="most-pop">Our Most Popular</p>
+
+						<ul class="list-unstyled configuration uppercase">
+							<li>1 GB Of Space </li>
+							<li>10 GB of bandwidth</li>
+							<li>3 websites</li>
+							<li>basic customization</li>
+							<li>wordpress integration</li>
+							<li>email support</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="price-box enterprise">
+						<h3 class="plan-head">Enterprise</h3>
+						<div class="option-price">
+							<span class="price">
+								<span class="usd">$</span>70
+							</span>
+							<span class="period">Free For Life</span>
+						</div>
+
+						<ul class="list-unstyled configuration uppercase">
+							<li>1 GB Of Space </li>
+							<li>10 GB of bandwidth</li>
+							<li>3 websites</li>
+							<li>basic customization</li>
+							<li>wordpress integration</li>
+							<li>email support</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
