--- a/index.html
+++ b/index.html
@@ -290,6 +290,57 @@
 		</div>
 	</div>
 
+	<!-- Testimonials Section-->
+	<div class="testimonial">
+		<div class="container">
+			<h2 class="uppercase head-border-center tes-head text-center h1">what our cusomers are saying</h2>
+			<p class="tes-desc text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+			<div class="row">
+
+				<div class="col-md-4">
+					<p class="client-tes">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+					<div class="media">
+						<div class="media-left">
+							<img class="media-object img-circle" src="img/avatar.png" alt="" />
+						</div>
+						<div class="media-left">
+							<h4 class="media-heading">Jeremy H.</h4>
+							<p>Manager</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<p class="client-tes">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+					<div class="media">
+						<div class="media-left">
+							<img class="media-object img-circle" src="img/avatar.png" alt="" />
+						</div>
+						<div class="media-left">
+							<h4 class="media-heading">Jeremy H.</h4>
+							<p>Manager</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<p class="client-tes">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+					<div class="media">
+						<div class="media-left">
+							<img class="media-object img-circle" src="img/avatar.png" alt="" />
+						</div>
+						<div class="media-left">
+							<h4 class="media-heading">Jeremy H.</h4>
+							<p>Manager</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
