--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 						<!-- navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -290,7 +290,7 @@
 		</div>
 	</div>
 
-	<!-- Testimonials Section-->
+							<!-- Testimonials Section-->
 	<div class="testimonial">
 		<div class="container">
 			<h2 class="uppercase head-border-center tes-head text-center h1">what our cusomers are saying</h2>
@@ -337,6 +337,17 @@
 					</div>
 				</div>
 
+			</div>
+		</div>
+	</div>
+
+							<!-- Stylish Section -->
+	<div class="stylish text-center">
+		<div class="overlay">
+			<div class="container">
+				<h2 class="stylish-head h1 head-border-center uppercase">Stylish Axure Design</h2>
+				<p class="stylish-desc">Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever.</p>
+				<button class="stylish-btn">Download</button>
 			</div>
 		</div>
 	</div>
