--- a/index.html
+++ b/index.html
@@ -352,6 +352,28 @@
 		</div>
 	</div>
 
+							<!-- Contact Us Section -->
+	<div class="contact">
+		<div class="container text-center">
+			<h2 class="h1 contact-head head-border-center uppercase">Contact Us</h2>
+			<p class="contact-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+			<div class="row">
+				<form class="contact-form">
+					<div class="col-md-6">
+						<input class="form-control input-lg" type="text" name="name" placeholder="Name" />
+						<input class="form-control input-lg" type="email" name="email" placeholder="Email" />
+						<input class="form-control input-lg" type="text" name="subject" placeholder="Subject" />
+					</div>
+					<div class="col-md-6">
+						<textarea class="form-control input-lg" name="message" placeholder="Message"></textarea>
+					</div>
+				</form>
+			</div>
+					<button type="submit" class="btn btn-lg contact-btn">Send Message</button>
+		</div>
+	</div>
+
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
