--- a/index.html
+++ b/index.html
@@ -374,6 +374,13 @@
 		</div>
 	</div>
 
+	<!-- Footer Section -->
+	<div class="footer">
+		<div class="container text-center">
+			&copy; Axure Themes 2017
+		</div>
+	</div>
+
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
