--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 	    <div class="container">
 		    <div class="row centering-vh">
 		      <div class="col-md-6">
-		        <h1 class="uppercase">Ax<span>it</span></h1>
-		        <p class="lead uppercase">modern axure template for beautiful prototypes</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		        <h1 class="uppercase text-center-xs">Ax<span>it</span></h1>
+		        <p class="lead uppercase text-center-xs">modern axure template for beautiful prototypes</p>
+						<p class="text-center-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 						<button>Download</button>
 		      </div>
 
@@ -81,7 +81,7 @@
 					<h3 class="plan-head">Social Media</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
 				</div>
-				<div class=col-md-8"">
+				<div class="col-md-8">
 					<i class="fa fa-facebook fa-3x fa-fw"></i>
 					<i class="fa fa-twitter fa-3x fa-fw"></i>
 					<i class="fa fa-google-plus fa-3x fa-fw"></i>
@@ -129,7 +129,7 @@
 				</div>
 
 				<div class="col-md-4">
-					<img src="img/tabs.png" class="img-responsive" alt="" />
+					<img src="img/tabs.png" class="img-responsive center-block hidden-sm hidden-xs" alt="" />
 				</div>
 			</div>
 		</div>
@@ -195,13 +195,13 @@
 			<p class="awesome-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 feature-box">
 					<i class="fa fa-lightbulb-o fa-3x"></i>
 					<h3 class="feature-head">Thoughtful Design</h3>
 					<p class="feature-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 				</div>
 
-				<div class="col-md-4">
+				<div class="col-md-4 feature-box">
 					<i class="fa fa-keyboard-o fa-2x"></i>
 					<h3 class="feature-head">Well  Crafted</h3>
 					<p class="feature-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
